Fixed overflow style in nugget table view

--- a/src/styles/layout/_nugget_table_view_layout.sass
+++ b/src/styles/layout/_nugget_table_view_layout.sass
@@ -28,6 +28,7 @@
 
           .cell
             box-sizing: border-box
+            overflow: hidden
             padding: 0 $gutter * 2
             position: relative
             white-space: nowrap
@@ -82,7 +83,7 @@
             &.tags
               max-width: 125px
               min-width: 125px
-                
+
             &.created-at
               max-width: 120px
               min-width: 120px
